clusters/k3s-cluster/mailbox/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailbox
  namespace: mailbox
spec:
  entryPoints:
    - imaps
  routes:
    - match: HostSNI(`mailbox.christou.cloud`)
      services:
        - name: local-imap
          port: 143
  tls: {}
